# PracticeOpenGL

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
res/shaders/: shader.fs  shader.vs
src/: Main.cpp  Shader.h  glad.c
